# labpp

./: CMakeLists.txt  README.md
DetSim/G4Example1/: CMakeLists.txt
DetSim/G4Example1/G4Example1/: CosmicEventAction.hxx  ExG4DetectorConstruction01.hxx  ExG4PhysicsList01.hxx  ExG4PrimaryGeneratorAction01.hxx  G4Example1Config.h  G4Example1Config.h.in  MuDetDetectorConstruction.hxx  SCHit.hxx  ScintillatorSD.hxx
DetSim/G4Example1/src/: CosmicEventAction.cxx  ExG4DetectorConstruction01.cxx  ExG4PhysicsList01.cxx  ExG4PrimaryGeneratorAction01.cxx  SCHit.cxx  ScintillatorSD.cxx
DetSim/G4Example1/src/main/: g4ex1.cxx  g4ex2.cxx
DetSim/SimData/: CMakeLists.txt
DetSim/SimData/SimData/: SCHitData.hxx  SCWaveformData.hxx  SimDataConfig.h.in  SimDataLinkDef.hxx  SimEvent.hxx  SimParticle.hxx  SimVertex.hxx
DetSim/SimData/src/: SCHitData.cxx  SimEvent.cxx  SimParticle.cxx  SimVertex.cxx
DetSim/SimData/src/main/: test_simdata1.cxx
ExPythia/: CMakeLists.txt  Makefile  basic.makefile  rules.makefile
ExPythia/.svn/: entries
ExPythia/.svn/text-base/: Makefile.svn-base  mydep.makefile.svn-base
ExPythia/ExPythia/: ExPythiaConfig.h.in
ExPythia/ExPythia/.svn/: entries
ExPythia/ExPythia/.svn/text-base/: MyMergingHooks.hxx.svn-base
ExPythia/doc/.svn/: entries
ExPythia/files/: generate_events.sh  install_sw.sh
ExPythia/files/.svn/: entries
ExPythia/files/.svn/text-base/: install_sw.sh.svn-base  main82_mod.cmnd.svn-base
ExPythia/scripts/: generate_events.sh  install_sw.sh  run_mgpj.sh
ExPythia/src/: MyMergingHooks.cxx  Pythia8ToHepMC3.cc
ExPythia/src/.svn/: entries
ExPythia/src/main/: pythia_mod82.cxx  pythia_mod82b.cxx  runPythiaJet.cxx
ExPythia/src/main/.svn/: entries
ExPythia/src/main/.svn/text-base/: pythia_mod82.cxx.svn-base
McData/: CMakeLists.txt  Makefile  basic.makefile  mydep.makefile
McData/.svn/: entries
McData/.svn/text-base/: basic.makefile.svn-base
McData/McData/: FastjetTools.hxx  HepmcTools.hxx  Jet.hxx  LargeRJet.hxx  LinkDef.hxx  McConverter.hxx  McDataConfig.h.in  McDataLinkDef.hxx  McEvent.hxx  McParticle.hxx  McVertex.hxx  PJEvent.hxx
McData/McData/.svn/: entries
McData/McData/.svn/text-base/: HepmcTools.hxx.svn-base  IndexPair.hxx.svn-base  LinkDef.hxx.svn-base  McConverter.hxx.svn-base  McParticle.hxx.svn-base  PJEvent.hxx.svn-base
McData/doc/.svn/: entries
McData/files/: ex1.C
McData/files/.svn/: entries
McData/src/: FastjetTools.cxx  HepmcTools.cxx  IndexPair.cxx  Jet.cxx  LHEF.h  LargeRJet.cxx  McConverter.cxx  McEvent.cxx  McParticle.cxx  McVertex.cxx  PJEvent.cxx
McData/src/.svn/: entries
McData/src/.svn/text-base/: ExRootHepMCJetConverter.cpp.svn-base  ExRootLHEFJetConverter.cpp.svn-base  FastjetTools.cxx.svn-base  HepmcTools.cxx.svn-base  Jet.cxx.svn-base  PJEvent.cxx.svn-base  runAnalysis.cxx.svn-base
PSystem/: CMakeLists.txt
PSystem/python/: Ball.py  dsgui.py  dss.py  replayConfig.py
PSystem/scripts/: dss.json  dssim1.py  runds1.py
Patterns/TrackVertex/: CMakeLists.txt  generateTracks.C  showEvent.C
Patterns/TrackVertex/TrackVertex/: Event.hxx  EventDisplay.hxx  Hit.hxx  Point.hxx  SimpleDetector.hxx  Square.hxx  SvgIO.hxx  Track.hxx  TrackExtrapolator.hxx  TrackFit.hxx  TrackVertexConfig.h.in  TrackVertexLinkDef.hxx  Vector.hxx  Vertex.hxx  VertexFit.hxx
Patterns/TrackVertex/macros/: generateTracks.C
Patterns/TrackVertex/src/: Event.cxx  EventDisplay.cxx  Hit.cxx  Point.cxx  SimpleDetector.cxx  Square.cxx  SvgIO.cxx  Track.cxx  TrackFit.cxx  Vector.cxx  Vertex.cxx  VertexFit.cxx
Setups/bayesStat/: CMakeLists.txt
Setups/detSim/: CMakeLists.txt
Setups/trackVertex/: CMakeLists.txt
Statistics/: CMakeLists.txt
Statistics/Bayes/: CMakeLists.txt
Statistics/Bayes/python/: bayesInference.py  bayesMain.py  blurImage.py
Statistics/Bayes/python/ppstat/: __init__.py  model.py
Statistics/Bayes/scripts/: run_blurImage.sh
Waves/: CMakeLists.txt
Waves/python/wsim/: __init__.py  formulas.py  model.py  tools.py
Waves/scripts/: doubleSlit.py  plotInterference.py  singleSlit.py
